--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@octokit/core": "^6.1.3",
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.8",
     "html-to-image": "^1.11.11",
