--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@octokit/core": "^6.1.3",
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.8",
+    "date-fns": "^4.1.0",
     "html-to-image": "^1.11.11",
     "next": "^14.2.20",
     "react": "^18.3.1",
